--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "heroicons-react": "^1.4.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^10.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
